Fix future wrong positioning
_Future_ as the issue will only happen when `inset` won’t be converted anymore to the four matching directions. Unfortunately, `unset` isn’t allowed as single value, but `auto` does the trick.

--- a/src/sass/components/menu/_ctn.scss
+++ b/src/sass/components/menu/_ctn.scss
@@ -21,7 +21,7 @@
 
   position: absolute;
   z-index: 1;
-  inset: var(--menu-y) 0 unset unset; // menu 1rem away from its toggle button
+  inset: v(menu-y) 0 auto auto; // menu 1rem away from its toggle button
 
   padding: 2rem;
 
